support > 1 filename being passed as command line parameters

--- a/README
+++ b/README
@@ -16,7 +16,8 @@ errors of the SQL.
 ##Installation
 ###Dependencies
 - Python >= 2.7
-    - May work with Pythons < 2.7 if you install argparse (sudo pip install argparse)
+    - May work with Python 2.6 if you install argparse (sudo pip install argparse)
+    - If you need support for Python < 2.6 let me know
 - ecpg
     - ubuntu/debian: sudo apt-get install libecpg-dev
     - rhel/centos: sudo yum install postgresql-devel
@@ -27,11 +28,23 @@ PgSanity is available in the Python Package Index, so you can install it with ei
 - sudo pip install pgsanity **or** sudo easy_install pgsanity
 
 ##Usage
-PgSanity will accept a filename as a parameter and it will report SQL syntax errors which exist in that file.  PgSanity will exit with a status code of 0 if the syntax of the SQL looks good and a 1 if any errors were found.
+PgSanity accepts filenames as parameters and it will report SQL syntax errors which exist in those files.  PgSanity will exit with a status code of 0 if the syntax of the SQL looks good and a 1 if any errors were found.
  
     $ pgsanity file_with_sql.sql
+    $ echo $?
+    0
+    $ pgsanity good1.sql good2.sql bad.sql
+    bad.sql: line 1: ERROR: syntax error at or near "bogus_token"
+    $ echo $?
+    1
  
-Alternatively PgSanity will read SQL from stdin if it is not given any parameters.  This way it can be used interactively or by piping SQL through it.
+Since pgsanity can handle multiple filenames as parameters it is very comfortable to use with find & xargs.
+    $ find -name '*.sql' | xargs pgsanity
+    ./sql/bad1.sql: line 59: ERROR: syntax error at or near ";"
+    ./sql/bad2.sql: line 41: ERROR: syntax error at or near "insert"
+    ./sql/bad3.sql: line 57: ERROR: syntax error at or near "update"
+
+Additionally PgSanity will read SQL from stdin if it is not given any parameters.  This way it can be used interactively or by piping SQL through it.
  
     $ pgsanity
     select column1 alias2 asdf from table3
@@ -41,6 +54,17 @@ Alternatively PgSanity will read SQL from stdin if it is not given any parameter
     $ echo "select mycol from mytable;" | pgsanity
     $ echo $?
     0
+
+##Interpreting The Results
+The error messages pretty much come directly from ecpg.  Something I have noticed while using pgsanity is that an error message on line X is probably more indicative of the statement right above X.  For example:
+    $ echo "select a from b\ninsert into mytable values (1, 2, 3);" | pgsanity
+    line 2: ERROR: syntax error at or near "into"
+The real problem in that SQL is that there is no semicolon after the 'b' in the select statement.  However, the SQL can not be determined to be invalid until the word "into" is encountered in the insert statement.  When in doubt, look up to the previous statement.
+
+Another common error message that can be a little weird to interpret is illustrated here:
+    echo "select a from b" | pgsanity 
+    line 2: ERROR: syntax error at or near ""
+The 'at or near ""' bit is trying to say that we got to the end of the file and no semicolon was found.
 
 ##Reporting Problems
 If you encounter any problems with PgSanity, especially any issues where it incorrectly states that invalid SQL is valid or vice versa, please report the issue on [PgSanity's github page](http://github.com/markdrago/pgsanity).  Thanks!
